--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
   </header>
 
   <!-- Hero -->
+<section id="enroll" class="block">
+  <div class="admission-legacy">
+    <marquee behavior="scroll" direction="left" scrollamount="7">
+      🎓 Admission Open Now • Apply Today • Limited Seats
+    </marquee>
+  </div>
+  
+</section>
+  
+
+
+
+
+
+
+
+
+  
   <section class="hero">
     <h1>Learn. Build. Get Placed.</h1>
     <p>Live projects + 100% job assurance</p>
